--- a/dada/templates/send_email_screen.tmpl
+++ b/dada/templates/send_email_screen.tmpl
@@ -15,12 +15,14 @@
 	 	        <!-- tmpl_if expr="(draft_role eq 'draft')" --> 
 	 	             Draft
 	 	        <!-- /tmpl_if -->
-	 	        <!-- tmpl_if expr="(draft_role eq 'stationary')" --> 
+	 	        <!-- tmpl_if expr="(draft_role eq 'stationery')" --> 
 	 	            Stationery
 	 	        <!-- /tmpl_if -->
 	 	        <!-- tmpl_if expr="(draft_role eq 'schedule')" --> 
 	 	            Schedule
 	 	        <!-- /tmpl_if -->
+	 	    <!-- tmpl_else --> 
+	 	         &#187; Draft
 	 	    <!-- /tmpl_if -->
 	</div>
 	<!-- tmpl_include help_link_widget.tmpl -->
@@ -42,7 +44,7 @@
           		</p>
           	</div> 
           <!-- /tmpl_if -->
-          <!-- tmpl_if expr="(draft_role eq 'stationary')" --> 
+          <!-- tmpl_if expr="(draft_role eq 'stationery')" --> 
               <!-- tmpl_if done --> 
                   <!-- tmpl_include changes_saved_dialog_box_widget.tmpl  -->
               <!-- /tmpl_if -->
@@ -80,10 +82,11 @@
  <input type="hidden" name="support_files_url" id="support_files_url" value="<!-- tmpl_var SUPPORT_FILES_URL -->" />
 
 
-<input type="hidden" id="f"            name="flavor"  value="send_email" />
+<input type="hidden" id="flavor"             name="flavor"                value="send_email" />
 
 <input type="hidden" id="draft_alert"        name="draft_alert"           value="<!-- tmpl_var draft_alert default="0" -->" />
 <input type="hidden" id="draft_id"           name="draft_id"              value="<!-- tmpl_var draft_id -->"                /> 
+<input type="hidden" id="save_draft_role"    name="save_draft_role"       value=""                                          />
 <input type="hidden" id="draft_role"         name="draft_role"            value="<!-- tmpl_var draft_role -->"              />
 <input type="hidden" id="restore_from_draft" name="restore_from_draft"    value="<!-- tmpl_var restore_from_draft -->"      />
 
@@ -225,7 +228,7 @@
 
 <div id="top_floating_button_wrapper">
   <div id="buttons">
-	<!-- tmpl_include send_a_list_message_button_widget.tmpl -->
+      <!-- tmpl_include send_a_list_message_button_widget.tmpl --> 
   </div>
 </div>
 
