--- a/dada/templates/send_url_email_screen.tmpl
+++ b/dada/templates/send_url_email_screen.tmpl
@@ -17,7 +17,7 @@
 	 	        <!-- tmpl_if expr="(draft_role eq 'draft')" --> 
 	 	             Draft
 	 	        <!-- /tmpl_if -->
-	 	        <!-- tmpl_if expr="(draft_role eq 'stationary')" --> 
+	 	        <!-- tmpl_if expr="(draft_role eq 'stationery')" --> 
 	 	            Stationery
 	 	        <!-- /tmpl_if -->
 	 	        <!-- tmpl_if expr="(draft_role eq 'schedule')" --> 
@@ -50,7 +50,7 @@
         		</p>
         	</div> 
         <!-- /tmpl_if -->
-        <!-- tmpl_if expr="(draft_role eq 'stationary')" --> 
+        <!-- tmpl_if expr="(draft_role eq 'stationery')" --> 
             <!-- tmpl_if done --> 
                 <!-- tmpl_include changes_saved_dialog_box_widget.tmpl  -->
             <!-- /tmpl_if -->
