--- a/dada/templates/draft_saved_notification_widget.tmpl
+++ b/dada/templates/draft_saved_notification_widget.tmpl
@@ -10,7 +10,7 @@
     <div class="floatclear"></div>
 <!-- /tmpl_if --> 
 
-<!-- tmpl_if expr="(role eq 'stationary')" -->
+<!-- tmpl_if expr="(role eq 'stationery')" -->
     <h1>Stationery Saved!</h1> 
     <div class="buttonfloat">
         <input type="button" id="keep_working_on_draft"     value="Thanks!"   class="processing" /> 
