--- a/dada/templates/plugins/bridge/default.tmpl
+++ b/dada/templates/plugins/bridge/default.tmpl
@@ -646,7 +646,7 @@ General
 		       <td>
 		        <p>
 		         <label for="authorized_sending_no_moderation">
-		          Allow Authorized Senders to send messages to your Subsribers List without moderation
+		          Allow Authorized Senders to send messages to your Subscribers List without moderation
 		         </label>
 		        </p>
 		       </td>
