--- a/dada/templates/mass_mail_schedules_preview.tmpl
+++ b/dada/templates/mass_mail_schedules_preview.tmpl
@@ -2,7 +2,17 @@
 
 <!-- tmpl_if errors --> 
     <p>Sorry, looks like something went wrong, calculating the schedules:</p>
-    <code><!-- tmpl_var errors escape="HTML" --></code>
+    <!-- tmpl_if can_use_datetime --> 
+        <code><!-- tmpl_var errors escape="HTML" --></code>
+    <!-- tmpl_else --> 
+        <p>
+            The following CPAN Perl Modules will need to be installed, for recurring schedules to work:
+        </p>
+        <ul>
+            <li>DateTime</li>
+            <li>DateTime::Event::Recurrence</li>
+        </ul> 
+    <!-- /tmpl_if --> 
 <!-- tmpl_else --> 
     <!-- tmpl_if schedule_activated -->
         <p><strong>Schedules activated!</strong></p>
